--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
+html{
+  width: 100%;
+  height: 100%;
+}
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #C7F5FF;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.wrapper{
+ width: 100%;
+ height: 100vh;
+ display: flex;
+ justify-content: center;
+align-items: center;
+}
+.weather-block{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 400px;
+  height: 600px;
+  background: linear-gradient(180deg, #1BC3E8 0%, #BEC9CB 100%);
+border-radius: 27px;
 }
